--- a/config/stumpwm/libraries/bluetooth/README.org
+++ b/config/stumpwm/libraries/bluetooth/README.org
@@ -1,23 +1,7 @@
-** end-session
-   This module provides commands to gracefully close all open programs
-   and shutdown or reboot the computer. A logout command is also
-   provided.
+** bluetooth
+   This module provide bluetooth UI facilities for StumpWM
 
-   This module requires the use of =logind= (or elogind), and requires the =polkit=
-   package to be installed, as well as the =wmctrl= command.
 ** Usage
-   Add these lines to your =.stumprc= file:
-   #+BEGIN_SRC lisp
-     ;; if you haven't added to load path yet:
-     (add-to-load-path #p"path-to-contrib/util/end-session")
-     ;; actually load the module
-     (load-module "end-session")
-     ;; Use loginctl instead of the default systemctl
-     (setf end-session:*end-session-command* "loginctl")
-   #+END_SRC
+   TBD
+
 *** Commands Provided:
-  - =end-session= Prompts for shutdown, restart, or logoff. You can
-     customize what this shows with =*end-session-menu*=. See [[file:end-session.lisp::86]]
-  - shutdown-computer
-  - restart-computer
-  - logout
