--- a/README.org
+++ b/README.org
@@ -49,7 +49,7 @@ Define system-level services & packages:
 - 1. =%system-services=
    - Set OpenSSH, CUPs, Screenlocker, and Bluetooth services
    - =%desktop-services= - modify-services to utilizes package substitutes now.
-   - =guix-home-service-type= -> TODO: would like to handle both concurrently
+   - =guix-home-service-type= - concurrently updates home profile and packages.
 - 2. =%stumpwm-packages= - Window Manager
   Note that packages are specified only as symbols and not using
   =specifications->packages=.
