Further readme updates...

--- a/README.org
+++ b/README.org
@@ -29,10 +29,10 @@
   and Nyxt. All configurations are contained in the config directory.
 
   Guix OS is now fully deployed via Guix using =home-impure-symlinks-service-type=
-  and staged as a distribution utilizing the new feature =guix-home-service-type= and
-  specifying channels therein under =guix-configuration=. All that is needed is to run
-  =sudo guix system reconfigure guix-config.scm= and everything will be set up after
-  initial Guix SD (nonguix) installation!
+  and staged as a distribution utilizing the new feature [[https://guix.gnu.org/manual/devel/en/html_node/Guix-Services.html#Guix-Home-Service][guix-home-service]] and
+  specifying channels therein via a [[https://guix.gnu.org/manual/devel/en/html_node/Customizing-the-System_002dWide-Guix.html][system-wide channel configuration]]. All that is
+  needed is to run =sudo guix system reconfigure guix-config.scm= and everything will be
+  set up after initial Guix SD (nonguix) installation!
 
   While this is considered an 'impure' approach, I personally like my config files to be
   flexible as opposed to immutable. I am constantly experimenting and would rather have
@@ -342,6 +342,10 @@ These are the =stumpwm-contrib= modules available in Guix that I am using.
    - https://github.com/iambumblehead/guix-home
 
    - https://systemcrafters.net/live-streams/january-13-2023/
+
+   - [[https://systemcrafters.net/live-streams/may-10-2024/][Guix Home Service & System-Wide Channels]]
+
+   - [[https://github.com/abcdw/rde][Guix RDE Distrobution Mirror]]
 
 2. StumpWM Configurations & Hacks:
 
